version/0.79/_sources/autoapi/pyedb/grpc/database/simulation_setup/siwave_cpa_simulation_setup/SolverOptions.rst.txt






:class:`SolverOptions`
======================


.. py:class:: pyedb.grpc.database.simulation_setup.siwave_cpa_simulation_setup.SolverOptions(pedb, cfg_solver_options=None)

   
   Represents solver options configuration for SIwave CPA simulations.



   :Attributes:

       **extraction_mode (str): Extraction mode ('si' or 'pi')**
           ..

       **custom_refinement (bool): Whether to use custom refinement settings**
           ..

       **extraction_frequency (str): Frequency for extraction (e.g. '10Ghz')**
           ..

       **compute_capacitance (bool): Whether to compute capacitance**
           ..

       **compute_dc_parameters (bool): Whether to compute DC parameters**
           ..

       **compute_dc_rl (bool): Whether to compute DC RL parameters**
           ..

       **compute_dc_cg (bool): Whether to compute DC CG parameters**
           ..

       **compute_ac_rl (bool): Whether to compute AC RL parameters**
           ..

       **ground_power_nets_for_si (bool): Whether to ground power nets for SI analysis**
           ..

       **small_hole_diameter (float|str): Small hole diameter value or 'auto'**
           ..

       **adaptive_refinement_cg_max_passes (int): Max passes for CG adaptive refinement**
           ..

       **adaptive_refinement_rl_max_passes (int): Max passes for RL adaptive refinement**
           ..

       **adaptive_refinement_cg_percent_error (float): Target error for CG refinement**
           ..

       **adaptive_refinement_rl_percent_error (float): Target error for RL refinement**
           ..

       **rl_percent_refinement_per_pass (float): RL refinement percentage per pass**
           ..

       **cg_percent_refinement_per_pass (float): CG refinement percentage per pass**
           ..

       **return_path_net_for_loop_parameters (bool): Whether to use return path net**
           ..













   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SolverOptions

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~extraction_mode`
            - Gets the extraction mode from the database.
          * - :py:attr:`~custom_refinement`
            - Gets the custom refinement setting from the database.
          * - :py:attr:`~extraction_frequency`
            - Gets the extraction frequency from the database.
          * - :py:attr:`~compute_capacitance`
            - Gets the compute capacitance setting from the database.
          * - :py:attr:`~compute_dc_parameters`
            - Gets the compute DC parameters setting from the database.
          * - :py:attr:`~compute_dc_rl`
            - Gets the compute DC RL parameters setting from the database.
          * - :py:attr:`~compute_dc_cg`
            - Gets the compute DC CG parameters setting from the database.
          * - :py:attr:`~compute_ac_rl`
            - Gets the compute AC RL parameters setting from the database.
          * - :py:attr:`~ground_power_nets_for_si`
            - Gets the ground power nets for SI analysis setting from the database.
          * - :py:attr:`~small_hole_diameter`
            - Gets the small hole diameter setting from the database.
          * - :py:attr:`~model_type`
            - Gets the model type setting from the database.
          * - :py:attr:`~adaptive_refinement_cg_max_passes`
            - Gets the maximum number of passes for CG adaptive refinement from the database.
          * - :py:attr:`~adaptive_refinement_cg_percent_error`
            - Gets the target error percentage for CG adaptive refinement from the database.
          * - :py:attr:`~cg_percent_refinement_per_pass`
            - Gets the percentage of CG refinement per pass from the database.
          * - :py:attr:`~adaptive_refinement_rl_max_passes`
            - Gets the maximum number of passes for RL adaptive refinement from the database.
          * - :py:attr:`~adaptive_refinement_rl_percent_error`
            - Gets the target error percentage for RL adaptive refinement from the database.
          * - :py:attr:`~rl_percent_refinement_per_pass`
            - Gets the percentage of RL refinement per pass from the database.
          * - :py:attr:`~return_path_net_for_loop_parameters`
            - Gets the return path net setting for loop parameters from the database.







Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.simulation_setup.siwave_cpa_simulation_setup import SolverOptions

Property detail
---------------

.. py:property:: extraction_mode

   
   Gets the extraction mode from the database.





   :Returns:

       str: :obj:`The` :obj:`extraction` mode. :obj:`Returns` "si" :obj:`if` :obj:`the` :obj:`mode` :obj:`is` :obj:`set` :obj:`to` "1", :obj:`otherwise` "pi".
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: custom_refinement

   
   Gets the custom refinement setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`custom` :obj:`refinement` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: extraction_frequency

   
   Gets the extraction frequency from the database.





   :Returns:

       str: :obj:`The` :obj:`extraction` :obj:`frequency` :obj:`value` :obj:`as` :obj:`a` string.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: compute_capacitance

   
   Gets the compute capacitance setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`capacitance` :obj:`computation` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: compute_dc_parameters

   
   Gets the compute DC parameters setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`DC` :obj:`parameters` :obj:`computation` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: compute_dc_rl

   
   Gets the compute DC RL parameters setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`DC` :obj:`RL` :obj:`parameters` :obj:`computation` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: compute_dc_cg

   
   Gets the compute DC CG parameters setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`DC` :obj:`CG` :obj:`parameters` :obj:`computation` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: compute_ac_rl

   
   Gets the compute AC RL parameters setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`AC` :obj:`RL` :obj:`parameters` :obj:`computation` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: ground_power_nets_for_si

   
   Gets the ground power nets for SI analysis setting from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`grounding` :obj:`power` :obj:`nets` :obj:`for` :obj:`SI` :obj:`analysis` :obj:`is` :obj:`enabled`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: small_hole_diameter

   
   Gets the small hole diameter setting from the database.





   :Returns:

       float|str: :obj:`The` :obj:`small` :obj:`hole` :obj:`diameter` :obj:`as` :obj:`a` :class:`python:float`, :obj:`or` 'auto' :obj:`if` :obj:`the` :obj:`value` :obj:`is` :obj:`set` :obj:`to` -1.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: model_type

   
   Gets the model type setting from the database.





   :Returns:

       str: :obj:`The` :obj:`model` type. :obj:`Returns` "rlcg" :obj:`if` :obj:`the` :obj:`model` :obj:`type` :obj:`is` :obj:`set` :obj:`to` "0", :obj:`otherwise` "esd_r".
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: adaptive_refinement_cg_max_passes

   
   Gets the maximum number of passes for CG adaptive refinement from the database.





   :Returns:

       int: :obj:`The` :obj:`maximum` :obj:`number` :obj:`of` :obj:`passes` :obj:`for` :obj:`CG` :obj:`adaptive` refinement.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: adaptive_refinement_cg_percent_error

   
   Gets the target error percentage for CG adaptive refinement from the database.





   :Returns:

       float: :obj:`The` :obj:`target` :obj:`error` :obj:`percentage` :obj:`for` :obj:`CG` :obj:`adaptive` refinement.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: cg_percent_refinement_per_pass

   
   Gets the percentage of CG refinement per pass from the database.





   :Returns:

       float: :obj:`The` :obj:`percentage` :obj:`of` :obj:`CG` :obj:`refinement` :obj:`per` pass.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: adaptive_refinement_rl_max_passes

   
   Gets the maximum number of passes for RL adaptive refinement from the database.





   :Returns:

       int: :obj:`The` :obj:`maximum` :obj:`number` :obj:`of` :obj:`passes` :obj:`for` :obj:`RL` :obj:`adaptive` refinement.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: adaptive_refinement_rl_percent_error

   
   Gets the target error percentage for RL adaptive refinement from the database.





   :Returns:

       float: :obj:`The` :obj:`target` :obj:`error` :obj:`percentage` :obj:`for` :obj:`RL` :obj:`adaptive` refinement.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: rl_percent_refinement_per_pass

   
   Gets the percentage of RL refinement per pass from the database.





   :Returns:

       float: :obj:`The` :obj:`percentage` :obj:`of` :obj:`RL` :obj:`refinement` :obj:`per` pass.
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: return_path_net_for_loop_parameters

   
   Gets the return path net setting for loop parameters from the database.





   :Returns:

       bool: :data:`python:True` :obj:`if` :obj:`the` :obj:`return` :obj:`path` :obj:`net` :obj:`is` :obj:`enabled` :obj:`for` :obj:`loop` :obj:`parameters`, :data:`python:False` otherwise.
           ..











   ..
       !! processed by numpydoc !!






